style(globals): Ensure scrollbar doesn't cause layout shifts

--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -4,21 +4,10 @@
 
 html, body {
     @apply scroll-smooth;
+    scrollbar-gutter: stable;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
     @apply relative bg-slate-50 dark:bg-slate-900;
-}
-
-*::-webkit-scrollbar,
-*::-webkit-scrollbar-thumb {
-    width: 26px;
-    border-radius: 13px;
-    background-clip: padding-box;
-    border: 10px solid transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0 10px;
 }
